k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wanllmdb
  labels:
    name: wanllmdb
    app: wanllmdb
